Clean up "unmodifiable" data provider.